2023-05-02 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Add missing module title
	* Verify compatibility with TYPO3 12 LTS
	* Release version 5.0.1

2022-12-27 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 5.0.0

2022-12-25 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with TYPO3 12, resolves #24
	* Ensure compatibility with PHP 8.1

2022-12-18 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Implement new connector service registration API, resolves #23
	* Adapt to new backend modules templating, resolves #25
	* Streamline retrieval of language service, resolves #26

2021-10-05 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 4.0.0

2021-09-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with PHP 8.0

2021-04-06 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with TYPO3 11, drop support for TYPO3 8 and 9
	* Drop usage of GeneralUtility::getUrl()
	* Update module icon and fix viewport issue

2021-02-22 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Update composer manifest
	* Release version 3.4.1

2020-05-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 3.4.0, resolves #22

2020-04-12 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Add API for reporting about configuration issues, resolves #18
	* Update documentation settings, resolves #19
	* Use JSON for sample files, resolves #21

2020-04-10 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with TYPO3 10

2019-01-04 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Restore ViewHelper compatibility with TYPO3 8, resolves #15
	* Release version 3.3.1

2018-12-28 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Ensure compatibility with TYPO3 9, drop devLog usage, resolves #13
	* Add API to store content of distant source into temporary file, resolves #14
	* Release version 3.3.0

2018-12-26 Francois Suter (Cobweb)  <typo3@cobweb.ch>
