@@ -113,10 +113,18 @@ class FileUtility implements SingletonInterface
                     )
                 );
             }
-            // Keep path as is if allowed absolute path
+        // Keep path as is if allowed absolute path
         } elseif (GeneralUtility::isAllowedAbsPath($uri)) {
             $data = @file_get_contents($uri);
-            // As a last resort, resolve "EXT:" syntax and paths relative to the TYPO3 root
+            if ($data === false) {
+                $this->setError(
+                    sprintf(
+                        'File %s could not be read',
+                        $uri
+                    )
+                );
+            }
+        // As a last resort, resolve "EXT:" syntax and paths relative to the TYPO3 root
         } else {
             $finalUri = GeneralUtility::getFileAbsFileName($uri);
             // The final URI might be empty, if GeneralUtility::getFileAbsFileName() wasn't happy with it
