@@ -1,3 +1,7 @@
+2023-07-04 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+	* Report error also for files with an absolute path, resolves #27
+
 2023-05-02 Francois Suter (Idéative)  <typo3@ideative.ch>
 
 	* Add missing module title
